# bitbox-client

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: bitbox-client.pc.in  bitbox-clientConfig.cmake.in
include/: bitbox-client.h
src/: CMakeLists.txt  bitbox-client.c  commander.c  commander.h  flags.h  memory.c  memory.h  random.c  utils.c  utils.h
tests/: CMakeLists.txt  tests_unit.c
